added some changes

--- a/assets/css/cubetech-image-carousel.css
+++ b/assets/css/cubetech-image-carousel.css
@@ -62,7 +62,7 @@
 	background: url(../img/slider-border.png);
 	height: 1px;
 	border: none;
-	width: 1370px;
+	width: 115%;
 	position: relative;
 	right: 80px;
 	top: -12px;
